Maps module implemented

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
 BASE_URL="https://story-api.dicoding.dev/v1/"
+MAPS_API="AIzaSyBEb8YDVdNTh1UaEhxaxzfSe3dclWlY2ZA"
